[gd_scene load_steps=4 format=3 uid="uid://gmgjokmp6mvv"]

[ext_resource type="Texture2D" uid="uid://k0uxviwxxso2" path="res://spearPlaceholder.png" id="1_rfb2o"]
[ext_resource type="Script" uid="uid://blnrk6adv7tf5" path="res://spear.gd" id="2_f1ptq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f1ptq"]
radius = 38.0
height = 264.0

[node name="spearArea" type="Area2D" groups=["weapons"]]
show_behind_parent = true
collision_layer = 0
collision_mask = 0
script = ExtResource("2_f1ptq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -64)
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_f1ptq")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_rfb2o")
offset = Vector2(0, -125)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="weapon_attack" from="." to="." method="_on_weapon_attack"]
[connection signal="weapon_parry" from="." to="." method="_on_weapon_parry"]
